[project]
name = "lm_torch"
requires-python = ">=3.10"
dynamic = ["version"]
description = ""
authors = [
  { name = "Peter Jin" },
]
keywords = []
license = { text = "Apache-2.0" }
readme = "README.md"
dependencies = [
  "safetensors>=0.4.0",
  "sentencepiece>=0.2.0",
  "torch>=2.1",
]
classifiers = []

[project.optional-dependencies]
examples = [
  "fire>=0.6.0",
]
